--- a/.gitmodules
+++ b/.gitmodules
@@ -1198,3 +1198,6 @@
 [submodule "5183770"]
 	path = 5183770
 	url = https://gist.github.com/5183770.git
+[submodule "5186190"]
+	path = 5186190
+	url = https://gist.github.com/5186190.git
