--- a/.gitmodules
+++ b/.gitmodules
@@ -1210,3 +1210,6 @@
 [submodule "5234127"]
 	path = 5234127
 	url = https://gist.github.com/5234127.git
+[submodule "5254256"]
+	path = 5254256
+	url = https://gist.github.com/5254256.git
