--- a/.gitmodules
+++ b/.gitmodules
@@ -1201,3 +1201,6 @@
 [submodule "5186190"]
 	path = 5186190
 	url = https://gist.github.com/5186190.git
+[submodule "5194493"]
+	path = 5194493
+	url = https://gist.github.com/5194493.git
