--- a/.gitmodules
+++ b/.gitmodules
@@ -1207,3 +1207,6 @@
 [submodule "5229977"]
 	path = 5229977
 	url = https://gist.github.com/5229977.git
+[submodule "5234127"]
+	path = 5234127
+	url = https://gist.github.com/5234127.git
