--- a/.gitmodules
+++ b/.gitmodules
@@ -1222,3 +1222,6 @@
 [submodule "5386162"]
 	path = 5386162
 	url = https://gist.github.com/5386162.git
+[submodule "5390541"]
+	path = 5390541
+	url = https://gist.github.com/5390541.git
