--- a/.gitmodules
+++ b/.gitmodules
@@ -1225,3 +1225,6 @@
 [submodule "5390541"]
 	path = 5390541
 	url = https://gist.github.com/5390541.git
+[submodule "5390578"]
+	path = 5390578
+	url = https://gist.github.com/5390578.git
