--- a/.gitmodules
+++ b/.gitmodules
@@ -1216,3 +1216,6 @@
 [submodule "5264466"]
 	path = 5264466
 	url = https://gist.github.com/5264466.git
+[submodule "5277578"]
+	path = 5277578
+	url = https://gist.github.com/5277578.git
