--- a/.gitmodules
+++ b/.gitmodules
@@ -1219,3 +1219,6 @@
 [submodule "5277578"]
 	path = 5277578
 	url = https://gist.github.com/5277578.git
+[submodule "5386162"]
+	path = 5386162
+	url = https://gist.github.com/5386162.git
