--- a/.gitmodules
+++ b/.gitmodules
@@ -1213,3 +1213,6 @@
 [submodule "5254256"]
 	path = 5254256
 	url = https://gist.github.com/5254256.git
+[submodule "5264466"]
+	path = 5264466
+	url = https://gist.github.com/5264466.git
