--- a/.gitmodules
+++ b/.gitmodules
@@ -1240,3 +1240,6 @@
 [submodule "5405482"]
 	path = 5405482
 	url = https://gist.github.com/5405482.git
+[submodule "5406274"]
+	path = 5406274
+	url = https://gist.github.com/5406274.git
