--- a/.gitmodules
+++ b/.gitmodules
@@ -1237,3 +1237,6 @@
 [submodule "5404158"]
 	path = 5404158
 	url = https://gist.github.com/5404158.git
+[submodule "5405482"]
+	path = 5405482
+	url = https://gist.github.com/5405482.git
