--- a/.gitmodules
+++ b/.gitmodules
@@ -1228,3 +1228,6 @@
 [submodule "5390578"]
 	path = 5390578
 	url = https://gist.github.com/5390578.git
+[submodule "5390580"]
+	path = 5390580
+	url = https://gist.github.com/5390580.git
