--- a/.gitmodules
+++ b/.gitmodules
@@ -1231,3 +1231,6 @@
 [submodule "5390580"]
 	path = 5390580
 	url = https://gist.github.com/5390580.git
+[submodule "5392825"]
+	path = 5392825
+	url = https://gist.github.com/5392825.git
