--- a/.gitmodules
+++ b/.gitmodules
@@ -1234,3 +1234,6 @@
 [submodule "5392825"]
 	path = 5392825
 	url = https://gist.github.com/5392825.git
+[submodule "5404158"]
+	path = 5404158
+	url = https://gist.github.com/5404158.git
