--- a/.gitmodules
+++ b/.gitmodules
@@ -1246,3 +1246,6 @@
 [submodule "5406277"]
 	path = 5406277
 	url = https://gist.github.com/5406277.git
+[submodule "5413911"]
+	path = 5413911
+	url = https://gist.github.com/5413911.git
