--- a/.gitmodules
+++ b/.gitmodules
@@ -1243,3 +1243,6 @@
 [submodule "5406274"]
 	path = 5406274
 	url = https://gist.github.com/5406274.git
+[submodule "5406277"]
+	path = 5406277
+	url = https://gist.github.com/5406277.git
