--- a/.gitmodules
+++ b/.gitmodules
@@ -1249,3 +1249,6 @@
 [submodule "5413911"]
 	path = 5413911
 	url = https://gist.github.com/5413911.git
+[submodule "5414483"]
+	path = 5414483
+	url = https://gist.github.com/5414483.git
