--- a/.gitmodules
+++ b/.gitmodules
@@ -1252,3 +1252,6 @@
 [submodule "5414483"]
 	path = 5414483
 	url = https://gist.github.com/5414483.git
+[submodule "5426771"]
+	path = 5426771
+	url = https://gist.github.com/5426771.git
