--- a/.gitmodules
+++ b/.gitmodules
@@ -1258,3 +1258,6 @@
 [submodule "5438178"]
 	path = 5438178
 	url = git@gist.github.com:5438178.git
+[submodule "5466425"]
+	path = 5466425
+	url = https://gist.github.com/5466425.git
