--- a/.gitmodules
+++ b/.gitmodules
@@ -1261,3 +1261,6 @@
 [submodule "5466425"]
 	path = 5466425
 	url = https://gist.github.com/5466425.git
+[submodule "5466431"]
+	path = 5466431
+	url = https://gist.github.com/5466431.git
