--- a/.gitmodules
+++ b/.gitmodules
@@ -1264,3 +1264,6 @@
 [submodule "5466431"]
 	path = 5466431
 	url = https://gist.github.com/5466431.git
+[submodule "5466443"]
+	path = 5466443
+	url = https://gist.github.com/5466443.git
