--- a/.gitmodules
+++ b/.gitmodules
@@ -1270,3 +1270,6 @@
 [submodule "5471843"]
 	path = 5471843
 	url = https://gist.github.com/5471843.git
+[submodule "5487833"]
+	path = 5487833
+	url = https://gist.github.com/5487833.git
