--- a/.gitmodules
+++ b/.gitmodules
@@ -1267,3 +1267,6 @@
 [submodule "5466443"]
 	path = 5466443
 	url = https://gist.github.com/5466443.git
+[submodule "5471843"]
+	path = 5471843
+	url = https://gist.github.com/5471843.git
