--- a/.gitmodules
+++ b/.gitmodules
@@ -1273,3 +1273,6 @@
 [submodule "5487833"]
 	path = 5487833
 	url = https://gist.github.com/5487833.git
+[submodule "5494274"]
+	path = 5494274
+	url = https://gist.github.com/5494274.git
