--- a/.gitmodules
+++ b/.gitmodules
@@ -1279,3 +1279,6 @@
 [submodule "5518910"]
 	path = 5518910
 	url = https://gist.github.com/5518910.git
+[submodule "5522375"]
+	path = 5522375
+	url = https://gist.github.com/5522375.git
