--- a/.gitmodules
+++ b/.gitmodules
@@ -1276,3 +1276,6 @@
 [submodule "5494274"]
 	path = 5494274
 	url = https://gist.github.com/5494274.git
+[submodule "5518910"]
+	path = 5518910
+	url = https://gist.github.com/5518910.git
