--- a/.gitmodules
+++ b/.gitmodules
@@ -1282,3 +1282,6 @@
 [submodule "5522375"]
 	path = 5522375
 	url = https://gist.github.com/5522375.git
+[submodule "5530678"]
+	path = 5530678
+	url = https://gist.github.com/5530678.git
