--- a/.gitmodules
+++ b/.gitmodules
@@ -1285,3 +1285,6 @@
 [submodule "5530678"]
 	path = 5530678
 	url = https://gist.github.com/5530678.git
+[submodule "5530695"]
+	path = 5530695
+	url = https://gist.github.com/5530695.git
