--- a/.gitmodules
+++ b/.gitmodules
@@ -1288,3 +1288,6 @@
 [submodule "5530695"]
 	path = 5530695
 	url = https://gist.github.com/5530695.git
+[submodule "5538662"]
+	path = 5538662
+	url = https://gist.github.com/5538662.git
