--- a/.gitmodules
+++ b/.gitmodules
@@ -1291,3 +1291,6 @@
 [submodule "5538662"]
 	path = 5538662
 	url = https://gist.github.com/5538662.git
+[submodule "5541559"]
+	path = 5541559
+	url = https://gist.github.com/5541559.git
