--- a/.gitmodules
+++ b/.gitmodules
@@ -1297,3 +1297,6 @@
 [submodule "5552098"]
 	path = 5552098
 	url = https://gist.github.com/5552098.git
+[submodule "5553393"]
+	path = 5553393
+	url = https://gist.github.com/5553393.git
