--- a/.gitmodules
+++ b/.gitmodules
@@ -1294,3 +1294,6 @@
 [submodule "5541559"]
 	path = 5541559
 	url = https://gist.github.com/5541559.git
+[submodule "5552098"]
+	path = 5552098
+	url = https://gist.github.com/5552098.git
