--- a/.gitmodules
+++ b/.gitmodules
@@ -1303,3 +1303,6 @@
 [submodule "5561591"]
 	path = 5561591
 	url = https://gist.github.com/5561591.git
+[submodule "5561640"]
+	path = 5561640
+	url = https://gist.github.com/5561640.git
