--- a/.gitmodules
+++ b/.gitmodules
@@ -1300,3 +1300,6 @@
 [submodule "5553393"]
 	path = 5553393
 	url = https://gist.github.com/5553393.git
+[submodule "5561591"]
+	path = 5561591
+	url = https://gist.github.com/5561591.git
