--- a/.gitmodules
+++ b/.gitmodules
@@ -1306,3 +1306,6 @@
 [submodule "5561640"]
 	path = 5561640
 	url = https://gist.github.com/5561640.git
+[submodule "5561742"]
+	path = 5561742
+	url = https://gist.github.com/5561742.git
