--- a/.gitmodules
+++ b/.gitmodules
@@ -1309,3 +1309,6 @@
 [submodule "5561742"]
 	path = 5561742
 	url = https://gist.github.com/5561742.git
+[submodule "5561814"]
+	path = 5561814
+	url = https://gist.github.com/5561814.git
