--- a/.gitmodules
+++ b/.gitmodules
@@ -1312,3 +1312,6 @@
 [submodule "5561814"]
 	path = 5561814
 	url = https://gist.github.com/5561814.git
+[submodule "5572758"]
+	path = 5572758
+	url = https://gist.github.com/5572758.git
