--- a/.gitmodules
+++ b/.gitmodules
@@ -1315,3 +1315,6 @@
 [submodule "5572758"]
 	path = 5572758
 	url = https://gist.github.com/5572758.git
+[submodule "5574101"]
+	path = 5574101
+	url = https://gist.github.com/5574101.git
