--- a/.gitmodules
+++ b/.gitmodules
@@ -1318,3 +1318,6 @@
 [submodule "5574101"]
 	path = 5574101
 	url = https://gist.github.com/5574101.git
+[submodule "5588011"]
+	path = 5588011
+	url = https://gist.github.com/5588011.git
