--- a/.gitmodules
+++ b/.gitmodules
@@ -1321,3 +1321,6 @@
 [submodule "5588011"]
 	path = 5588011
 	url = https://gist.github.com/5588011.git
+[submodule "5588023"]
+	path = 5588023
+	url = https://gist.github.com/5588023.git
