--- a/.gitmodules
+++ b/.gitmodules
@@ -1327,3 +1327,6 @@
 [submodule "5596098"]
 	path = 5596098
 	url = https://gist.github.com/5596098.git
+[submodule "5597935"]
+	path = 5597935
+	url = https://gist.github.com/5597935.git
