--- a/.gitmodules
+++ b/.gitmodules
@@ -1324,3 +1324,6 @@
 [submodule "5588023"]
 	path = 5588023
 	url = https://gist.github.com/5588023.git
+[submodule "5596098"]
+	path = 5596098
+	url = https://gist.github.com/5596098.git
