--- a/.gitmodules
+++ b/.gitmodules
@@ -1330,3 +1330,6 @@
 [submodule "5597935"]
 	path = 5597935
 	url = https://gist.github.com/5597935.git
+[submodule "5598014"]
+	path = 5598014
+	url = https://gist.github.com/5598014.git
