--- a/.gitmodules
+++ b/.gitmodules
@@ -1336,3 +1336,6 @@
 [submodule "5603884"]
 	path = 5603884
 	url = https://gist.github.com/5603884.git
+[submodule "5604108"]
+	path = 5604108
+	url = https://gist.github.com/5604108.git
