--- a/.gitmodules
+++ b/.gitmodules
@@ -1333,3 +1333,6 @@
 [submodule "5598014"]
 	path = 5598014
 	url = https://gist.github.com/5598014.git
+[submodule "5603884"]
+	path = 5603884
+	url = https://gist.github.com/5603884.git
