--- a/.gitmodules
+++ b/.gitmodules
@@ -1342,3 +1342,6 @@
 [submodule "5638408"]
 	path = 5638408
 	url = https://gist.github.com/5638408.git
+[submodule "5639591"]
+	path = 5639591
+	url = https://gist.github.com/5639591.git
