--- a/.gitmodules
+++ b/.gitmodules
@@ -1339,3 +1339,6 @@
 [submodule "5604108"]
 	path = 5604108
 	url = https://gist.github.com/5604108.git
+[submodule "5638408"]
+	path = 5638408
+	url = https://gist.github.com/5638408.git
